[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.4.0"
gloo-console = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
http = "1.0.0"
log = "0.4.20"
serde_json = "1.0.108"
env_logger = "0.10.1"
wasm-bindgen = "0.2.88"
wasm-logger = "0.2.0"
error-chain = { version = "0.12.4", features = [] }